--- a/apps/express/public/css/styles.css
+++ b/apps/express/public/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 h2 {
   text-align: center;
@@ -53,4 +54,61 @@ button:hover {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+/* 채팅 */
+.chat {
+  display: flex;
+  height: 100vh;
+}
+.chat_main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+}
+
+.chat_footer {
+  padding: 20px;
+}
+.message_form {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+#message-form input,
+.message_form input {
+  flex: 4;
+  width: auto;
+  margin: 0;
+}
+#message-form button,
+.message_form button {
+  flex: 1;
+  width: auto;
+  margin: 0;
+}
+
+.chat_messages {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat_sidebar {
+  width: 250px;
+  background-color: #f2f1a271;
+  padding: 10px 0 10px 0;
+}
+
+.list-title {
+  padding: 20px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.users-list {
+  padding: 5px;
+  font-size: 16px;
 }
